crates/es-fluent-derive/tests/ui/fluent_label_explicit_bool.stderr
error: Attribute error in label container: `#[fluent_label(origin = ...)]` has the wrong value shape for key `origin` in label container `LoginForm`
       help: use a bare flag, for example `origin`
 --> tests/ui/fluent_label_explicit_bool.rs:4:16
  |
4 | #[fluent_label(origin = true, variants = true)]
  |                ^^^^^^

error: Attribute error in label container: `#[fluent_label(variants = ...)]` has the wrong value shape for key `variants` in label container `LoginForm`
       help: use a bare flag, for example `variants`
 --> tests/ui/fluent_label_explicit_bool.rs:4:31
  |
4 | #[fluent_label(origin = true, variants = true)]
  |                               ^^^^^^^^
