crates/es-fluent-derive/tests/ui/fluent_label_explicit_bool.rs
use es_fluent_derive::EsFluentLabel;

#[derive(EsFluentLabel)]
#[fluent_label(origin = true, variants = true)]
pub struct LoginForm;

fn main() {}
